--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -6,6 +6,14 @@ body {
 	color: #333333;
 }
 
+.body-changelog{
+	font-family: 'Poppins', sans-serif;
+	max-width: 1280px;
+	margin: 0 auto;
+	background-color: black;
+	color: #333333;
+}
+
 body.modo-escuro {
 	background-color: #212121;
 	color: #f5f5f5;
